<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Yo</string>
    <string name="create_trip_button">Create Trip</string>
    <string name="view_location">Location</string>
    <string name="trip_time">Planned Time: </string>
    <string name="pick_time">Select Time</string>
    <string name="trip_destination">Destination: </string>
    <string name="trip_name">Trip Name: </string>
    <string name="create_trip_title">Create A Trip</string>
    <string name="submit_view">Submit &amp; View</string>
    <string name="title_activity_view">View</string>
    <string name="title_activity_show">Details of the Trip</string>
	<string name="trip_list">Trip Detail</string>
	<string name="join_trip">Join Trip</string>
</resources>
