<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"            
            android:text="@string/trip_name" />

        <EditText
            android:id="@+id/trip_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/trip_time" />

        <EditText
            android:id="@+id/trip_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="datetime" />
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/trip_destination" />

        <EditText
            android:id="@+id/trip_destination_input"            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" />
        
    </LinearLayout>
    <Button 
        android:id="@+id/submit_trip_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submit_trip"
        android:text="@string/submit_view"/>
</LinearLayout>